[chore]: refactored project after initial PoC

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ numpy = "*"
 matplotlib = "*"
 opencv-python = "*"
 segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
+pytest = "*"
 
 [dev-packages]
 
